Fix layout bug on older browsers

--- a/docs/css/screen.scss
+++ b/docs/css/screen.scss
@@ -37,11 +37,17 @@ html {
           margin-right: 0.5em;
           text-align: right;
           li {
-            width: 2.5em;
             display: inline-block;
             margin-left: .25em;
-            svg{
-              border: 1px solid #000;
+            a {
+              display: block;
+              padding: 0;
+              margin: 0;
+              svg{
+                border: 1px solid #000;
+                width: 2.4em;
+                height: 1.2em;
+              }
             }
           }
         }
